[gd_scene load_steps=5 format=2]

[ext_resource path="res://Icons/grey.png" type="Texture" id=1]
[ext_resource path="res://Icons/grey_pressed.png" type="Texture" id=2]
[ext_resource path="res://Icons/save.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Save Game.gd" type="Script" id=4]

[node name="Control" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 550.0
margin_right = 1024.0
margin_bottom = 600.0
alignment = 2

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 974.0
margin_right = 1024.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
flat = true
script = ExtResource( 4 )

[node name="Neutral" type="NinePatchRect" parent="VBoxContainer/HBoxContainer/Button"]
modulate = Color( 0.854902, 0.12549, 0.329412, 1 )
margin_right = 50.0
margin_bottom = 50.0
texture = ExtResource( 1 )
patch_margin_left = 4
patch_margin_top = 5
patch_margin_right = 4
patch_margin_bottom = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pressed" type="NinePatchRect" parent="VBoxContainer/HBoxContainer/Button"]
visible = false
modulate = Color( 0.78, 0.117, 0.30485, 1 )
margin_right = 50.0
margin_bottom = 50.0
texture = ExtResource( 2 )
patch_margin_left = 4
patch_margin_top = 5
patch_margin_right = 4
patch_margin_bottom = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shadow" type="Sprite" parent="VBoxContainer/HBoxContainer/Button"]
self_modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
position = Vector2( 25, 24 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )

[node name="Icon" type="Sprite" parent="VBoxContainer/HBoxContainer/Button"]
position = Vector2( 25, 22 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )

[connection signal="button_down" from="VBoxContainer/HBoxContainer/Button" to="VBoxContainer/HBoxContainer/Button" method="_on_button_down"]
[connection signal="button_up" from="VBoxContainer/HBoxContainer/Button" to="VBoxContainer/HBoxContainer/Button" method="_on_button_up"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button" to="VBoxContainer/HBoxContainer/Button" method="_on_pressed"]
